fix -webkit-overflow-scrolling

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -66,7 +66,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    -webkit-overflow-scrolling: touch;
+    /*-webkit-overflow-scrolling: touch;*/
     position: relative;
     z-index: 5000;
 
@@ -95,8 +95,10 @@
     left: 0;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
+
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
 }
@@ -111,8 +113,11 @@
     height: 100%;
     overflow: auto;
     position: relative;
-    z-index: 1;
-    -webkit-overflow-scrolling: touch;
+    z-index: 2;
+}
+.page-current .page-content { -webkit-overflow-scrolling: touch; }
+.page-content > * {
+    -webkit-transform: translateZ(0px);
 }
 .header-through .page-content { padding-top: 44px; }
 .footer-through .page-content { padding-bottom: 60px; }
